<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:paddingTop="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="KeyboardInaccessibleWidget">

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/path"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:hint="@string/path"
        android:paddingTop="24dp"
        app:endIconDrawable="@drawable/ic_copy"
        app:endIconMode="custom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/path_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:enabled="false"
            android:focusable="false"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:hint="@string/address"
        android:paddingTop="16dp"
        app:endIconDrawable="@drawable/ic_copy"
        app:endIconMode="custom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/path">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:enabled="false"
            android:focusable="false"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/privateKey"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:hint="@string/private_key"
        android:paddingTop="16dp"
        app:endIconDrawable="@drawable/ic_copy"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/private_key_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:enabled="false"
            android:focusable="false"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

