<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="android.text.TextUtils" />

        <variable
            name="vm"
            type="com.androidcryptocyber.metamask.MainViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".MainActivity"
        tools:ignore="KeyboardInaccessibleWidget">

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:clickable="true"
                android:focusable="true"
                android:padding="16dp"
                android:focusableInTouchMode="true"
                tools:context=".MainActivity"
                tools:ignore="KeyboardInaccessibleWidget">

                <ImageView
                    android:id="@+id/eth_logo"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/ethereum_logo"
                    android:src="@drawable/logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:hint="@string/password"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    app:endIconDrawable="@drawable/ic_copy"
                    app:endIconMode="custom"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/eth_logo">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:enabled="@{TextUtils.isEmpty(vm.mnemonic)}"
                        android:focusable="true"
                        android:focusableInTouchMode="@{TextUtils.isEmpty(vm.mnemonic)}"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:text="@={vm.password}"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mnemonic"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:hint="@string/mnemonic"
                    android:visibility="@{TextUtils.isEmpty(vm.mnemonic) ? View.GONE : View.VISIBLE}"
                    app:endIconDrawable="@drawable/ic_copy"
                    app:endIconMode="custom"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mnemonic_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:enabled="false"
                        android:focusable="false"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:text="@={vm.mnemonic}"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/derived_addresses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="64dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mnemonic" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            app:layout_constraintGuide_end="16dp"
            android:orientation="horizontal"/>

        <ImageButton
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/create"
            android:onClick="@{()->vm.create(derivedAddresses)}"
            android:src="@drawable/ic_new"
            android:textAllCaps="false"
            android:visibility="@{TextUtils.isEmpty(vm.mnemonic) ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@+id/plusOne"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@android:color/holo_blue_light" />

        <ImageButton
            android:id="@+id/plusOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/add_one"
            android:onClick="@{()->vm.newDerivedAddress(derivedAddresses)}"
            android:src="@drawable/ic_plus_one"
            android:textAllCaps="false"
            android:visibility="@{vm.isLoading || TextUtils.isEmpty(vm.mnemonic) ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@+id/delete"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/create"
            app:tint="@android:color/holo_green_dark" />


        <ImageButton
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/delete"
            android:onClick="@{()->vm.reset(derivedAddresses)}"
            android:src="@drawable/ic_delete_forever"
            android:textAllCaps="false"
            android:visibility="@{vm.isLoading || TextUtils.isEmpty(vm.mnemonic) ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/plusOne"
            app:tint="@android:color/holo_red_dark" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="@{vm.isLoading ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>